kubernetes/03-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: <your-username>/team4-web:v1 # REPLACE THIS
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /models
              name: shared-storage
              subPath: models
            - mountPath: /data
              name: shared-storage
              subPath: data
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: LoadBalancer # Gives you an external IP/Port
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
